--- a/SeleniumNewProject/pom.xml
+++ b/SeleniumNewProject/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>jdbc151NT</artifactId>
+    <artifactId>SeleniumNewProject</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -14,16 +14,4 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
-
-        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.5.0</version>
-        </dependency>
-
-    </dependencies>
-
 </project>
-
